--- a/style.css
+++ b/style.css
@@ -1,21 +1,39 @@
+body{
+    background-color: white
+}
 header{
+    color: DodgerBlue;
     background-color: black;
 }
 header img{
     width: 100px;
 }
+
 main{
     background-color: white;
 }
+
 main img{
     width: 250px;
 }
+
 /*
 .Flash{
     width: 300px;
 } */
+
 footer{
+    color: DodgerBlue;
     background-color: black;
-    justify-content: space-around;
-    
+    justify-content: space-around;   
 }
+
+/*
+}
+a: link {
+    color: white
+}
+a:hover {
+    color: white 
+}
+*/
