--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+*{
+    margin: 0;
+}
+
 body{
     background-color: white
 }
 header{
     color: DodgerBlue;
     background-color: black;
+    padding: 20px;
 }
 header img{
     width: 100px;
@@ -11,10 +16,12 @@ header img{
 
 main{
     background-color: white;
+    padding: 20px;
 }
 
 main img{
     width: 250px;
+    padding: 20px;
 }
 
 /*
@@ -26,6 +33,7 @@ footer{
     color: DodgerBlue;
     background-color: black;
     justify-content: space-around;   
+    padding: 20px;
 }
 
 /*
